php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #66334 Memory Leak in new pass1_5.c optimizations
Submitted: 2013-12-21 16:01 UTC Modified: -
From: Terry at ellisons dot org dot uk Assigned:
Status: Closed Package: opcache
PHP Version: master-Git-2013-12-21 (Git) OS: N/A
Private report: No CVE-ID: None
 [2013-12-21 16:01 UTC] Terry at ellisons dot org dot uk
Description:
------------
The extension_loaded code emallocs a temporary string to *lc_name, but on the two short-circuits which skip this don't efree it.

Test script:
---------------
I have updated https://gist.github.com/TerryE/8048948 to show this.

Expected result:
----------------
See test but must be run on a --enable-debug build.  A Freeing error is reported on the "not-extension" string




Patches

pass1_5-extension_loaded.diff (last revision 2013-12-21 16:02 UTC by Terry at ellisons dot org dot uk)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2013-12-23 12:06 UTC] dmitry@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=ccb29a6e41afc3a5ced31e86951fca5119a2e8d0
Log: Fixed bug #66334 (Memory Leak in new pass1_5.c optimizations). (Terry)
 [2013-12-23 12:06 UTC] dmitry@php.net
-Status: Open +Status: Closed
 [2013-12-23 20:15 UTC] ab@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=c699696c438eeb3214d3a645110d03f98f8e979e
Log: Fixed bug #66334 (Memory Leak in new pass1_5.c optimizations). (Terry)
 [2013-12-23 22:43 UTC] ab@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=ccb29a6e41afc3a5ced31e86951fca5119a2e8d0
Log: Fixed bug #66334 (Memory Leak in new pass1_5.c optimizations). (Terry)
 [2014-08-22 07:07 UTC] ab@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=c699696c438eeb3214d3a645110d03f98f8e979e
Log: Fixed bug #66334 (Memory Leak in new pass1_5.c optimizations). (Terry)
 [2016-07-20 11:40 UTC] davey@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=c699696c438eeb3214d3a645110d03f98f8e979e
Log: Fixed bug #66334 (Memory Leak in new pass1_5.c optimizations). (Terry)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 10:00:01 2026 UTC