Fixed bug #66334 (Memory Leak in new pass1_5.c optimizations). (Terry)