ext/opcache/Optimizer/pass1_5.c
@@ -383,9 +383,11 @@ if (ZEND_OPTIMIZER_PASS_1 & OPTIMIZATION_LEVEL) {
 					zend_module_entry *m;
 					char *lc_name = zend_str_tolower_dup(
 							Z_STRVAL(ZEND_OP1_LITERAL(opline - 1)), Z_STRSIZE(ZEND_OP1_LITERAL(opline - 1)));
+					int found = zend_hash_find(&module_registry,
+							lc_name, Z_STRSIZE(ZEND_OP1_LITERAL(opline - 1)) + 1, (void *)&m) == SUCCESS;
 
-					if (zend_hash_find(&module_registry,
-							lc_name, Z_STRSIZE(ZEND_OP1_LITERAL(opline - 1)) + 1, (void *)&m) == FAILURE) {
+					efree(lc_name);
+					if (!found) {
 						if (!PG(enable_dl)) {
 							break;
 						} else {
@@ -405,7 +407,6 @@ if (ZEND_OPTIMIZER_PASS_1 & OPTIMIZATION_LEVEL) {
 						literal_dtor(&ZEND_OP1_LITERAL(opline));
 						MAKE_NOP(opline);
 					}
-					efree(lc_name);
 				} else if (Z_STRSIZE(ZEND_OP1_LITERAL(opline)) == sizeof("defined")-1 &&
 					!memcmp(Z_STRVAL(ZEND_OP1_LITERAL(opline)),
 						"defined", sizeof("defined")-1)) {
